--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jodolrui/glue",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Total feature separation in Vue 3 Composition API components",
   "main": "glue.js",
   "scripts": {
@@ -13,7 +13,7 @@
     "vue3-composition-api"
   ],
   "author": "Jose Dolz",
-  "license": "ISC",
+  "license": "MIT",
   "types": "./glue.d.ts",
   "repository": {
     "type": "git",
